トップページ作成

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,7 @@
 %section.top-container
   %div.top-container__logo
+    %div.wave
+    %div.wave.w-two
+    %div.wave.w-three
+    %i.fas.fa-glass-cheers
+
