--- a/app/assets/stylesheets/modules/_home.scss
+++ b/app/assets/stylesheets/modules/_home.scss
@@ -1,4 +1,54 @@
 .top-container {
   height: 100vh;
-  background: #333333;
+  background: -moz-linear-gradient(top, #000033, #003366);
+  background: -webkit-linear-gradient(top, #000033, #003366);
+  background: linear-gradient(to bottom, #000033, #003366);
+  position: relative;
+  &__logo {
+    width: 170px;
+    height: 170px;
+    border: solid 1px rgba(255,255,255,.4);
+    border-radius: 50%;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    .fa-glass-cheers {
+      font-size: 60px;
+      color: #fff;
+    }
+    .wave {
+      opacity: .2;
+      position: absolute;
+      top: 35px;
+      background: #fff;
+      width: 320px;
+      height: 300px;
+      transform-origin: 50% 48%;
+      border-radius: 43%;
+      animation: drift 7000ms infinite linear;
+      }
+    .w-three {
+      animation: drift 9000ms infinite linear;
+      background: #fff;
+      }
+    .w-two {
+      position: absolute;
+      top: 55px;
+      animation: drift 15000ms infinite linear;
+      opacity: .4;
+      background: #FFFF00;
+      border-radius: 48%;
+      }
+    @keyframes drift {
+      from { transform: rotate(0deg); }
+      from { transform: rotate(360deg); }
+    }
+  }
 }
