トップページ編集

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,52 @@
 %section.top-container
+  %header.top-container__header
+    %div.top-container__header-menu top
+    %div.top-container__header-menu menu
+    %div.top-container__header-menu about
+    %div.top-container__header-menu service
+    %div.top-container__header-menu recruit
+  %div.move10.pos3
+    %div.scale2
+      %div.item.shake2
+  %div.move14.pos7
+    %div.scale4
+      %div.item.shake2
+  %div.move17.pos11
+    %div.scale3
+      %div.item.shake2
+  %div.move23.pos18
+    %div.scale4
+      %div.item.shake2
+  %div.move28.pos27
+    %div.scale2
+      %div.item.shake2
+  %div.move33.pos35
+    %div.scale3
+      %div.item.shake2
+  %div.move4.pos30
+    %div.scale2
+      %div.item.shake2
+  %div.move2.pos37
+    %div.scale4
+      %div.item.shake2
+  %div.move1.pos45
+    %div.scale3
+      %div.item.shake2
+  %div.move3.pos55
+    %div.scale4
+      %div.item.shake2
+  %div.move5.pos62
+    %div.scale2
+      %div.item.shake2
+  %div.move3.pos87
+    %div.scale3
+      %div.item.shake2
   %div.top-container__logo
+    = image_tag("http://yonayonabeerworks.com/common/images/logo.png")
     %div.wave
     %div.wave.w-two
     %div.wave.w-three
-    %i.fas.fa-glass-cheers
+  %div.top-container__main-text
+  %div.scroll
+%section.middle-container
 
