--- a/app/assets/stylesheets/modules/_home.scss
+++ b/app/assets/stylesheets/modules/_home.scss
@@ -1,9 +1,56 @@
 .top-container {
   height: 100vh;
-  background: -moz-linear-gradient(top, #000033, #003366);
-  background: -webkit-linear-gradient(top, #000033, #003366);
-  background: linear-gradient(to bottom, #000033, #003366);
+  background: -moz-linear-gradient(top, #BF923B, #ECE61A);
+  background: -webkit-linear-gradient(top, #BF923B, #ECE61A);
+  background: linear-gradient(to bottom, #BF923B, #ECE61A);
   position: relative;
+  overflow: hidden;
+  &__header {
+    height: 70px;
+    background: image-url("header-bg.jpg");
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+  }
+  &__header-menu {
+    display: inline-block;
+    font-size: 18px;
+    font-family: impact;
+    letter-spacing: 0.1em;
+    height: 40px;
+    width: 120px;
+    border-left: solid 1px #999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__header-menu:last-child {
+    border-right: solid 1px #999999;
+  }
+  &__main-text {
+    background: image-url("main-text.png");
+    margin: auto;
+    position: absolute;
+    top: 300px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 41px;
+    width: 661px;
+  }
+  .scroll {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform : translate(-50%, -50%);
+    height: 70px;
+    width: 70px;
+    background: image-url("btn_scroll.png");
+    background-size: cover;
+  }
   &__logo {
     width: 170px;
     height: 170px;
@@ -51,4 +98,90 @@
       from { transform: rotate(360deg); }
     }
   }
+  .item {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.6) inset;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.6) inset;
+    position: relative;
+  }
+  .item:after {
+    content: "";
+    display: block;
+    width: 20%;
+    height: 20%;
+    border-radius: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    position: absolute;
+    right: 15%;
+    top: 15%;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+    transform: rotateZ(45deg) scaleY(0.8);
+    -webkit-transform: rotateZ(45deg) scaleY(0.8);
+  }
+  @keyframes shake {
+    0% { transform: translateX(10px); }
+    50% { transform: translateX(-10px); }
+    100% { transform: translateX(10px); }
+  }
+  @-webkit-keyframes shake {
+    0% { -webkit-transform: translateX(10px); }
+    50% { -webkit-transform: translateX(-10px); }
+    100% { -webkit-transform: translateX(10px); }
+  }
+  .shake {
+    animation: shake 2s ease 0s infinite normal;
+    -webkit-animation: shake 2s ease 0s infinite normal;
+  }
+  @keyframes move {
+    0% { transform: translateY(0px); }
+    100% { transform: translateY(-1000px); opacity: 0; }
+  }
+  @-webkit-keyframes move {
+    0% { -webkit-transform: translateY(0px); }
+    100% { -webkit-transform: translateY(-700px); opacity: 0; }
+  }
+  .move {
+    animation: move 5s cubic-bezier(0.47, 0, 0.745, 0.715) 0s infinite normal;
+    -webkit-animation: move 5s cubic-bezier(0.47, 0, 0.745, 0.715) 0s infinite normal;
+    position: absolute;
+    bottom: -10%;
+    left: 50%;
+  }
+  $b_ease: cubic-bezier(0.470,0.000,0.745,0.715);
+  @for $i from 0 through 50 {
+    $time: $i*0.2;
+    $scale: $i*0.1;
+    .stretch#{$i} {
+      animation: stretch ($time+2)+s ease 0s infinite normal;
+      -webkit-animation: stretch ($time+2)+s ease 0s infinite normal;
+    }
+    .shake#{$i} {
+      animation: shake ($time+2)+s ease 0s infinite normal;
+      -webkit-animation: shake ($time+2)+s ease 0s infinite normal;
+    }
+    .move#{$i}  {
+      animation: move ($time+5)+s $b_ease $time+s infinite normal;
+      -webkit-animation: move ($time+5)+s $b_ease $time+s infinite normal;
+      position: absolute;
+      bottom: -20%;
+    }
+    .pos#{$i}  {
+      left: percentage($i*2/100);
+    }
+    .scale#{$i}  {
+      transform: scale($scale);
+      -webkit-transform: scale($scale);
+    }
+  }
+}
+
+.middle-container {
+  height: 100vh;
+  background: -moz-linear-gradient(top, #5D341A, #0F0B0A);
+  background: -webkit-linear-gradient(top, #5D341A, #0F0B0A);
+  background: linear-gradient(to bottom, #5D341A, #0F0B0A);
 }
