--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,4 +49,13 @@
   %div.top-container__main-text
   %div.scroll
 %section.middle-container
+  %div.middle-container__inner
+    %div.photo1-text
+      %h1.photo1-text__title 商品特徴
+      %p.photo1-text__dis クラフトビールの味わいの王道を追求した、
+      %p.photo1-text__dis アメリカンペールエールです。
+    %div.middle-container__photo1
+    %div.middle-container__photo2
+    %div.middle-container__photo3
+    %div.middle-container__photo4
 
