--- a/app/assets/stylesheets/modules/_home.scss
+++ b/app/assets/stylesheets/modules/_home.scss
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     width: 100%;
     z-index: 1;
   }
@@ -184,4 +183,33 @@
   background: -moz-linear-gradient(top, #5D341A, #0F0B0A);
   background: -webkit-linear-gradient(top, #5D341A, #0F0B0A);
   background: linear-gradient(to bottom, #5D341A, #0F0B0A);
+  &__inner {
+    width: 80%;
+    height: 600px;
+    margin: 0 auto;
+    position: relative;
+  }
+  &__photo1 {
+    width: 1080px;
+    height: 400px;
+    background: image-url("beer-photo1.jpg");
+    background-size: cover;
+    position: absolute;
+    top: 100px;
+    left: 80px;
+  }
+  .photo1-text {
+    position: absolute;
+    color: #fff;
+    top: 240px;
+    left: 130px;
+    z-index: 1;
+  &__title {
+    font-size: 42px;
+    padding-bottom: 20px;
+  }
+  &__dis {
+    font-size: 24px;
+    }
+  }
 }
