--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -50,12 +50,35 @@
   %div.scroll
 %section.middle-container
   %div.middle-container__inner
+    %div.middle-container__photo1
     %div.photo1-text
       %h1.photo1-text__title 商品特徴
       %p.photo1-text__dis クラフトビールの味わいの王道を追求した、
       %p.photo1-text__dis アメリカンペールエールです。
-    %div.middle-container__photo1
     %div.middle-container__photo2
+    %div.photo2-text
+      %h1.photo2-text__title 01
+      %p.photo2-text__dis
+        最大限に引き出された
+        %br 鮮やかなポップの香り
+      %p.photo2-text__dis2 最大の個性であるアロマホップ「カスケード」の香りを引き出すために、
+      %p.photo2-text__dis2 レシピの改良を重ねてきました。グラスを傾ければ、カスケード特有の
+      %p.photo2-text__dis2 グレープフルーツやレモンのようなホップ香が、フレッシュに香ります。
     %div.middle-container__photo3
+    %div.photo3-text
+      %h1.photo3-text__title 02
+      %p.photo3-text__dis
+        喉をとおったあとも
+        %br ゆったりつづく香りの余韻
+      %p.photo3-text__dis2 「味わい」として感じられる香りにも、こだわりがあります。
+      %p.photo3-text__dis2 喉をとおったあとも、香りが心地よくとどまりつづけ、“戻り香”が鼻を
+      %p.photo3-text__dis2 抜けるように醸造。ゆったりとした余韻に、あなたをいざないます。
     %div.middle-container__photo4
-
+    %div.photo4-text
+      %h1.photo4-text__title 03
+      %p.photo4-text__dis
+        世界をめざして磨いた技術を
+        %br よなよなエールに
+      %p.photo4-text__dis2 これまでもWorld Beer Cupをはじめ、国内外のさまざまな賞を受賞。
+      %p.photo4-text__dis2 ホップ香の研究、新製品の開発など、世界品質のクラフトビールをめざして
+      %p.photo4-text__dis2 磨いた技術を、惜しみなくそそいでいます。
